package com.foodsquad.FoodSquad.model.entity;

public enum UserRole {
    NORMAL,
    ADMIN,
    MODERATOR
}