@startuml
class User {
    +String id
    +String name
    +String email
    +String password
    +UserRole role
    +String imageUrl
    +String phoneNumber
    +LocalDateTime createdOn
}

class MenuItem {
    +Long id
    +String title
    +String description
    +String imageUrl
    +Boolean defaultItem
    +Double price
    +MenuItemCategory category
}

class Order {
    +String id
    +Double totalCost
    +OrderStatus status
    +Boolean paid
    +LocalDateTime createdOn
}

class Review {
    +Long id
    +String comment
    +int rating
    +LocalDateTime createdOn
}

class Token {
    +Long id
    +String accessToken
    +String refreshToken
    +LocalDateTime accessTokenExpiryDate
    +LocalDateTime refreshTokenExpiryDate
}

class UserRole {
    NORMAL
    ADMIN
    MODERATOR
}

class OrderStatus {
    PENDING
    COMPLETED
    CANCELLED
}

class MenuItemCategory {
    PIZZA
    BURGER
    PASTA
    SUSHI
    SALAD
    TACOS
    DESSERT
    OTHER
}

User "1" -- "*" Order : "places"
User --> UserRole : "has"
Order --> OrderStatus : "has"
User "1" -- "*" Token : "has"
User "1" -- "*" Review : "writes"
User "1" -- "*" MenuItem : "owns"
Order "1" -- "*" MenuItem : "contains"
Review "1" -- "1" MenuItem : "reviews"
MenuItem --> MenuItemCategory : "has a"

@enduml
